  cyclic trash, a memory error can occur.  This consistently created a
  segfault in a debug build, but provided less predictable behavior in
  a release build.

- Fixed a bug in object.__reduce_ex__ when using protocol 2.  Failure
  to clear the error when attempts to get the __getstate__ attribute
  fail caused intermittent errors and odd behavior.

Library
-------

- Bug #883604: Fix Lib/test/test_strftime.py to escape characters from locale
  time values that might be mistaken as regex syntax.

- Bug #700055: .pth files can now have any type of line endings.

- Patch 817379: Allow absolute ftp paths in urllib2.

- Patch 711838: Support non-anonymous ftp URLs in urllib2.

What's New in Python 2.3.3 (final)?
===================================

*Release date: 19-Dec-2003*

Core and builtins
-----------------

- Removed PendingDeprecationWarning from apply().  apply() remains
  deprecated, but the nuisance warning will not be issued.

Library
-------

- A couple of bugs were squished in trace.py

What's New in Python 2.3.3c1?
=============================

*Release date: 05-Dec-2003*

Core and builtins
-----------------

- Critical bugfix, for SF bug 839548:  if a weakref with a callback,
  its callback, and its weakly referenced object, all became part of
  cyclic garbage during a single run of garbage collection, the order
  in which they were torn down was unpredictable.  It was possible for
  the callback to see partially-torn-down objects, leading to immediate
  segfaults, or, if the callback resurrected garbage objects, to
  resurrect insane objects that caused segfaults (or other surprises)
  later.  In one sense this wasn't surprising, because Python's cyclic gc
  had no knowledge of Python's weakref objects.  It does now.  When
  weakrefs with callbacks become part of cyclic garbage now, those
  weakrefs are cleared first.  The callbacks don't trigger then,
  preventing the problems.  If you need callbacks to trigger, then just